--- a/src/templates/header.jade
+++ b/src/templates/header.jade
@@ -1,5 +1,5 @@
 doctype html
 html(lang="ru")
     include ./includes/head.jade
-    body(style="background: #2856F6;height:200vh")
+    body(style="background: #2856F6;height:200svh")
         include ./includes/header.html
