--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -44,28 +44,28 @@
                                 <div class="swiper-wrapper flex space-x-2">
                                     <div class="swiper-slide w-auto flex-shrink-0">
                                         <a href="https://tolkunov.com/journal-soon"
-                                           class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all text-blue-900 hover:text-[#FD375B] hover:bg-[#F4F6FA] focus:text-[#FD375B] focus:bg-[#F4F6FA] active:scale-95">
+                                           class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all !text-blue-900 hover:text-[#FD375B] hover:bg-[#F4F6FA] focus:text-[#FD375B] focus:bg-[#F4F6FA] active:scale-95">
                                             <i class="icon icon-logo size-7 transition-colors"></i>
                                             <span class="text-blue-900">Журнал</span>
                                         </a>
                                     </div>
                                     <div class="swiper-slide w-auto flex-shrink-0">
                                         <a href="https://tolkunov.com/academy"
-                                           class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all text-blue-900 hover:text-[#0CF2F2] hover:bg-[#F4F6FA] focus:text-[#0CF2F2] focus:bg-[#F4F6FA] active:scale-95">
+                                           class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all !text-blue-900 hover:text-[#0CF2F2] hover:bg-[#F4F6FA] focus:text-[#0CF2F2] focus:bg-[#F4F6FA] active:scale-95">
                                             <i class="icon icon-logo size-7 transition-colors"></i>
                                             <span class="text-blue-900">Академия</span>
                                         </a>
                                     </div>
                                     <div class="swiper-slide w-auto flex-shrink-0">
                                         <a href="https://tolkunov.com/services"
-                                           class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all text-blue-900 hover:text-[#6928F6] hover:bg-[#F4F6FA] focus:text-[#6928F6] focus:bg-[#F4F6FA] active:scale-95">
+                                           class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all !text-blue-900 hover:text-[#6928F6] hover:bg-[#F4F6FA] focus:text-[#6928F6] focus:bg-[#F4F6FA] active:scale-95">
                                             <i class="icon icon-logo size-7 transition-colors"></i>
                                             <span class="text-blue-900">Сервисы</span>
                                         </a>
                                     </div>
                                     <div class="swiper-slide w-auto flex-shrink-0">
                                         <a href="https://tolkunov.com/market"
-                                           class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all text-blue-900 hover:text-[#A7F628] hover:bg-[#F4F6FA] focus:text-[#A7F628] focus:bg-[#F4F6FA] active:scale-95">
+                                           class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all !text-blue-900 hover:text-[#A7F628] hover:bg-[#F4F6FA] focus:text-[#A7F628] focus:bg-[#F4F6FA] active:scale-95">
                                             <i class="icon icon-logo size-7 transition-colors"></i>
                                             <span class="text-blue-900">Маркет</span>
                                         </a>
