--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -3,7 +3,7 @@
         <div class="header__container">
             <section class="header__main">
                 <div class="flex flex-nowrap items-center gap-4 max-lg:justify-between max-lg:flex-1">
-                    <a href="#" class="header__logo flex flex-nowrap items-center gap-3 lg:w-[152px] xl:w-[170px]">
+                    <a href="#" class="header__logo flex flex-nowrap items-center gap-3 transition-colors lg:w-[152px] xl:w-[170px]">
                         <i class="icon icon-logo size-11 md:size-10 xl:size-11 text-blue-600"></i>
                         <span>Продакшн</span>
                     </a>
@@ -210,7 +210,7 @@
                             <span class="text-blue-900 text-xs/4 xl:text-[13px]/4">Привет! Я фаундер агентства</span>
                         </div>
 
-                        <div class="flex flex-col items-start gap-3 px-3 py-2.5 xl:px-2.5 rounded-2xl bg-[#F4F6FA]">
+                        <div class="flex flex-col items-start gap-3 px-3 py-2.5 rounded-2xl bg-[#F4F6FA]">
                             <span class="text-blue-900 text-xs/4 xl:text-[13px]/4">Отвечу на вопросы, составлю смету, поставлю задачи команде, проконтролирую качество</span>
                             <a href="https://t.me/tolkunovdb" target="_blank" class="flex items-center gap-2 px-3.5 py-2.5 rounded-xl bg-white text-blue-900 font-glina text-lg/3.5 !no-underline">
                                 <i class="icon icon-telegram-full size-3"></i>
