--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -1,5 +1,5 @@
-<header class="header" data-open="false">
-    <div class="h-[60px] lg:h-[72px] relative">
+<header class="header header_flat" data-open="false">
+    <div class="h-[60px] lg:h-[72px] xl:h-[80px] relative">
         <div class="header__container">
             <section class="header__main">
                 <div class="flex flex-nowrap items-center gap-4 max-lg:justify-between max-lg:flex-1">
