--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -219,11 +219,13 @@
 }
 
 .b-portfolio-item__bg {
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-
     width: 100%;
     display: block;
+}
+
+.fancybox-inner .b-portfolio-item__bg {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
 }
 
 .b-portfolio-item__background {
@@ -243,37 +245,31 @@
     height: 1000px;
     max-height: 100%;
     background: linear-gradient(to bottom, rgba(22, 31, 106, 1) 0%, rgba(22, 31, 106, 0) 100%);
+}
 
+.fancybox-inner .b-portfolio-item__shadow {
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
 
 @media (min-width: @screen-lg) {
-    .b-portfolio-item__container_with_background {
-        margin-top: 80px;
-
-        @media (min-width: 1200px) {
-            margin-top: 40px;
-        }
-    }
-
     .fancybox-inner .b-portfolio-item__container_with_background {
         margin-top: 0;
     }
 
     .b-portfolio-item__container_with_background.b-portfolio-item_ready {
         .b-portfolio-item__head {
-            margin: -80px 0 -4px;
+            margin: ~"calc(var(--header-height) * -1)" 0 -4px;
 
             .b-back-button {
                 position: absolute;
-                top: 80px;
+                top: var(--header-height);
                 left: 15px;
             }
 
             .b-page__title {
                 position: absolute;
-                top: 80px + 21px + 50px;
+                top: ~"calc(var(--header-height) + 21px + 50px)";
                 left: 15px;
                 right: 40px;
                 color: #ffffff;
@@ -292,8 +288,8 @@
         }
 
         .b-portfolio-item__background {
-            border-top-left-radius: 15px;
-            border-top-right-radius: 15px;
+            //border-top-left-radius: 15px;
+            //border-top-right-radius: 15px;
             overflow: hidden;
         }
 
@@ -305,5 +301,13 @@
         //    padding-left: 40px;
         //    padding-right: 40px;
         //}
+    }
+
+    .fancybox-inner .b-portfolio-item__container_with_background.b-portfolio-item_ready {
+        .b-portfolio-item__background {
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+            overflow: hidden;
+        }
     }
 }
