--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -1,4 +1,4 @@
-<header class="header header_flat" data-open="false">
+<header class="header" data-open="false">
     <div class="h-[60px] lg:h-[72px] xl:h-[80px] relative">
         <div class="header__container">
             <section class="header__main">
@@ -52,7 +52,10 @@
                                     <div class="swiper-slide w-auto flex-shrink-0">
                                         <a href="https://tolkunov.com/academy"
                                            class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all !text-blue-900 hover:text-[#0CF2F2] hover:bg-[#F4F6FA] focus:text-[#0CF2F2] focus:bg-[#F4F6FA] active:scale-95">
-                                            <i class="icon icon-logo size-7 transition-colors"></i>
+                                            <span class="relative size-7">
+                                                <i class="absolute inset-0 icon icon-logo size-7 transition-opacity opacity-100 group-hover:opacity-0 group-focus:opacity-0"></i>
+                                                <i class="absolute inset-0 icon icon-logo-academy size-7 transition-opacity opacity-0 group-hover:opacity-100 group-focus:opacity-100"></i>
+                                            </span>
                                             <span class="text-blue-900">Академия</span>
                                         </a>
                                     </div>
@@ -66,7 +69,10 @@
                                     <div class="swiper-slide w-auto flex-shrink-0">
                                         <a href="https://tolkunov.com/market"
                                            class="group inline-flex items-center gap-1.5 p-2 rounded-xl !no-underline transition-all !text-blue-900 hover:text-[#A7F628] hover:bg-[#F4F6FA] focus:text-[#A7F628] focus:bg-[#F4F6FA] active:scale-95">
-                                            <i class="icon icon-logo size-7 transition-colors"></i>
+                                            <span class="relative size-7">
+                                                <i class="absolute inset-0 icon icon-logo size-7 transition-opacity opacity-100 group-hover:opacity-0 group-focus:opacity-0"></i>
+                                                <i class="absolute inset-0 icon icon-logo-market size-7 transition-opacity opacity-0 group-hover:opacity-100 group-focus:opacity-100"></i>
+                                            </span>
                                             <span class="text-blue-900">Маркет</span>
                                         </a>
                                     </div>
@@ -84,7 +90,10 @@
                         </a>
                         <a href="https://tolkunov.com/academy"
                            class="group inline-flex items-center gap-2 xl:gap-1.5 p-2 xl:px-3 rounded-xl !no-underline transition-all text-blue-900 hover:text-[#0CF2F2] hover:bg-[#F4F6FA] focus:text-[#0CF2F2] focus:bg-[#F4F6FA]">
-                            <i class="icon icon-logo size-7 transition-colors"></i>
+                            <span class="relative size-7">
+                                <i class="absolute inset-0 icon icon-logo size-7 transition-opacity opacity-100 group-hover:opacity-0 group-focus:opacity-0"></i>
+                                <i class="absolute inset-0 icon icon-logo-academy size-7 transition-opacity opacity-0 group-hover:opacity-100 group-focus:opacity-100"></i>
+                            </span>
                             <span class="text-blue-900">Академия</span>
                         </a>
                         <a href="https://tolkunov.com/services"
@@ -94,7 +103,10 @@
                         </a>
                         <a href="https://tolkunov.com/market"
                            class="group inline-flex items-center gap-2 xl:gap-1.5 p-2 xl:px-3 rounded-xl !no-underline transition-all text-blue-900 hover:text-[#A7F628] hover:bg-[#F4F6FA] focus:text-[#A7F628] focus:bg-[#F4F6FA]">
-                            <i class="icon icon-logo size-7 transition-colors"></i>
+                            <span class="relative size-7">
+                                <i class="absolute inset-0 icon icon-logo size-7 transition-opacity opacity-100 group-hover:opacity-0 group-focus:opacity-0"></i>
+                                <i class="absolute inset-0 icon icon-logo-market size-7 transition-opacity opacity-0 group-hover:opacity-100 group-focus:opacity-100"></i>
+                            </span>
                             <span class="text-blue-900">Маркет</span>
                         </a>
                     </div>
