--- a/src/templates/includes/header.html
+++ b/src/templates/includes/header.html
@@ -146,7 +146,7 @@
 
                 <!-- footer services -->
                 <div class="services-menu services-menu_small flex flex-col items-start gap-0 -mx-2 lg:mx-0 xl:-mx-2 max-md:hidden">
-                    <a href="#" class="services-menu__item group w-full">
+                    <a href="#" class="services-menu__item group">
                         <span class="services-menu__label">Баннеры</span>
 
                         <div class="services-menu__tags">
@@ -159,7 +159,7 @@
                             <i class="icon icon-menu-link w-6 h-3 text-[#ABB1C4]"></i>
                         </div>
                     </a>
-                    <a href="#" class="services-menu__item group w-full">
+                    <a href="#" class="services-menu__item group">
                         <span class="services-menu__label">Наружка</span>
 
                         <div class="services-menu__tags">
@@ -172,7 +172,7 @@
                             <i class="icon icon-menu-link w-6 h-3 text-[#ABB1C4]"></i>
                         </div>
                     </a>
-                    <a href="#" class="services-menu__item group w-full">
+                    <a href="#" class="services-menu__item group">
                         <span class="services-menu__label">2D</span>
 
                         <div class="services-menu__tags">
@@ -184,7 +184,7 @@
                             <i class="icon icon-menu-link w-6 h-3 text-[#ABB1C4]"></i>
                         </div>
                     </a>
-                    <a href="#" class="services-menu__item group w-full">
+                    <a href="#" class="services-menu__item group">
                         <span class="services-menu__label">3D</span>
 
                         <div class="services-menu__tags">
@@ -196,7 +196,7 @@
                             <i class="icon icon-menu-link w-6 h-3 text-[#ABB1C4]"></i>
                         </div>
                     </a>
-                    <a href="#" class="services-menu__item group w-full">
+                    <a href="#" class="services-menu__item group">
                         <span class="services-menu__label">Лендинги</span>
 
                         <div class="services-menu__tags">
